--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -87,8 +87,8 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_gravity="start"
-            android:layout_marginLeft="4dp"
-            android:text="Forgot password?"
+            android:layout_marginStart="4dp"
+            android:text="@string/forgot_password"
             android:textColor="@android:color/black"
             android:textSize="14sp" />
 
