--- a/app/src/main/res/layout/activity_welcome_screen.xml
+++ b/app/src/main/res/layout/activity_welcome_screen.xml
@@ -15,9 +15,13 @@
         android:id="@+id/imageView"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginTop="200dp"
+        android:layout_marginTop="100dp"
+        app:srcCompat="@drawable/appicon" />
+    <ImageView
+        android:id="@+id/imageView2"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
         app:srcCompat="@drawable/logo" />
-
     <TextView
         android:id="@+id/textView"
         android:layout_width="wrap_content"
@@ -27,7 +31,7 @@
         android:textColor="@color/black"
         android:textSize="24sp"
         android:textStyle="bold"
-        android:layout_marginTop="120dp" />
+        android:layout_marginTop="100dp" />
 
     <TextView
         android:id="@+id/textView2"
@@ -57,10 +61,12 @@
         android:layout_height="52dp"
         android:layout_marginTop="48dp"
         android:layout_marginBottom="-32dp"
-        android:backgroundTint="@color/btnColor"
+        android:backgroundTint="#3D4C51"
         android:text="@string/btnString1"
-        android:textColor="@color/black"
+        android:textColor="@color/white"
         android:textSize="18sp"
         app:cornerRadius="12dp" />
+
+
 
 </LinearLayout>
