--- a/app/src/main/res/layout/activity_signup.xml
+++ b/app/src/main/res/layout/activity_signup.xml
@@ -29,6 +29,7 @@
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toStartOf="parent"
+        android:elevation="8dp"
         >
         <EditText
             android:id="@+id/etName"
@@ -36,6 +37,8 @@
             android:layout_height="wrap_content"
             android:layout_marginVertical="16dp"
             android:backgroundTint="@color/black"
+            android:textCursorDrawable="@null"
+            android:textColor="@color/black"
             android:hint="Name"
             android:textColorHint="@color/black"
             />
@@ -47,6 +50,8 @@
             android:layout_marginVertical="16dp"
             android:backgroundTint="@android:color/black"
             android:hint="Email"
+            android:textCursorDrawable="@null"
+            android:textColor="@color/black"
             android:paddingBottom="10dp"
             android:textColorHint="@color/black" />
 
@@ -57,6 +62,8 @@
             android:layout_marginVertical="16dp"
             android:backgroundTint="@android:color/black"
             android:hint="Password"
+            android:textCursorDrawable="@null"
+            android:textColor="@color/black"
             android:inputType="textPassword"
             android:paddingBottom="10dp"
             android:textColorHint="@color/black" />
@@ -68,6 +75,8 @@
             android:layout_marginVertical="16dp"
             android:backgroundTint="@android:color/black"
             android:hint="Retype password"
+            android:textColor="@color/black"
+            android:textCursorDrawable="@null"
             android:inputType="textPassword"
             android:paddingBottom="10dp"
             android:textColorHint="@color/black" />
@@ -82,6 +91,8 @@
             android:text="Submit"
             android:textColor="@color/black"
             android:textSize="18sp"
+            android:elevation="10dp"
+            android:stateListAnimator="@null"
             app:cornerRadius="12dp" />
 
 
@@ -102,11 +113,11 @@
         app:layout_constraintStart_toStartOf="parent" />
 
     <ImageView
-        android:id="@+id/logo_png"
+        android:id="@+id/logoPng"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="72dp"
-        app:layout_constraintBottom_toTopOf="@+id/tv_login"
+        app:layout_constraintBottom_toTopOf="@+id/tvSignup"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.496"
         app:layout_constraintStart_toStartOf="parent"
