--- a/app/src/main/res/layout/activity_welcome_screen.xml
+++ b/app/src/main/res/layout/activity_welcome_screen.xml
@@ -13,10 +13,11 @@
 
     <ImageView
         android:id="@+id/imageView"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
+        android:layout_width="179dp"
+        android:layout_height="147dp"
         android:layout_marginTop="100dp"
         app:srcCompat="@drawable/appicon" />
+
     <ImageView
         android:id="@+id/imageView2"
         android:layout_width="match_parent"
@@ -65,7 +66,9 @@
         android:text="@string/btnString1"
         android:textColor="@color/white"
         android:textSize="18sp"
-        app:cornerRadius="12dp" />
+        app:cornerRadius="12dp"
+        android:elevation="10dp"
+        android:stateListAnimator="@null"/>
 
 
 
