--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -2,8 +2,12 @@
     <!-- Base application theme. -->
     <style name="Base.Theme.Echoplex" parent="Theme.Material3.DayNight.NoActionBar">
         <!-- Customize your light theme here. -->
-        <!-- <item name="colorPrimary">@color/my_light_primary</item> -->
+         <item name="colorPrimary">@color/mainColor</item>
+         <item name="colorPrimaryVariant">@color/mainColor</item>
+         <item name="android:statusBarColor">@color/mainColor</item>
     </style>
 
-    <style name="Theme.Echoplex" parent="Base.Theme.Echoplex" />
+    <style name="App.Custom.Indicator" parent="Widget.Material3.BottomNavigationView.ActiveIndicator">
+        <item name="android:color">@color/btnColor</item>
+    </style>
 </resources>
